# lexical

./: .gitignore  README.md  demo.py  pyproject.toml
docs/: FEATURE_STATISTICS.md  USAGE.md  WEIGHTS_MAPPING.md
ko_liwc/: __init__.py  analyzer.py  constants.py  exceptions.py
ko_liwc/core/: __init__.py  tokenizer.py
ko_liwc/dictionaries/: __init__.py  cognitive.py  emotion.py  fillers.py  negations.py  pos_mapping.py  pronouns.py  quantifiers.py  relativity.py  work.py
ko_liwc/features/: __init__.py  base.py  cognitive.py  emotion.py  misc.py  pos_features.py  pronouns.py  speaking_rate.py
ko_liwc/models/: __init__.py  features.py  scores.py  transcript.py
ko_liwc/scoring/: __init__.py  normalizer.py  scorer.py  weights.py
ko_liwc/statistics/: __init__.py  calculate_stats.py
scripts/: generate_charts.py
tests/: __init__.py  test_analyzer.py  test_features.py  test_scoring.py  test_tokenizer.py
