[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ko-liwc"
version = "0.1.0"
description = "Korean LIWC-based Interview Performance Analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "hoddukzoa" }
]
keywords = ["nlp", "korean", "liwc", "interview", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "kiwipiepy>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hoddukzoa/ko-liwc"
Documentation = "https://github.com/hoddukzoa/ko-liwc#readme"
Repository = "https://github.com/hoddukzoa/ko-liwc"

[tool.hatch.build.targets.wheel]
packages = ["ko_liwc"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
